# mptc

./: README.md  mptc.cabal  stack.yaml
app/: Main.hs
src/BuiltIn/: BuiltInTypes.hs  InitialDataConEnv.hs  InitialKindEnv.hs
src/Iface/: ClassInstCollector.hs  DataConsCollector.hs  Iface.hs  IfaceDriver.hs  IfaceReader.hs  IfaceWriter.hs  InstDeriving.hs
src/Language/Haskell/Exts/: InternalParser.hs
src/Libs/: Base.hs  Bounded.hs  BuiltIn.hs  CompileAll.hs  Enum.hs  GHCLoops.hs  PreludeIO.hs  PreludeIO.hs~  TesteMultFin.hs  TesteRedCarlos.hs  ZipTest.hs  ZipTest.hs~  ZipTestOpt.hs  ZipTestOpt.hs~  ZipTestOptNew.hs  ZipTestOptNew.hs~
src/Libs/Control/: Category.hs  Monad.hs
src/Libs/Data/: Maybe.hs
src/Libs/Tests/: Duggan.hs  Eq.hs  EqTests.hs  FDLoopGHCTest.hs  LoopSimplify.hs  MapTests.hs  SCLoop.hs  SimpleTest.hs  TestCtx.hs  TestFaxenPT.hs  TestMult.hs  TesteCarlos.hs  TesteGhcPT.hs
src/Tc/: Assumption.hs  Class.hs  TcAlphaEq.hs  TcClassInstGen.hs  TcCriteria.hs  TcCriteria.hs~  TcDecl.hs  TcDecl.hs~  TcDriver.hs  TcEnv.hs  TcExp.hs  TcExp.hs-boot  TcInst.hs  TcLabel.hs  TcLcg.hs  TcLiteral.hs  TcMonad.hs  TcOrdering.hs  TcPat.hs  TcSat.hs  TcSat.hs~  TcSimplify.hs  TcSubst.hs  TcWellformed.hs  TySyn.hs
src/Tc/Kc/: KcDriver.hs  KcEnv.hs  KcMonad.hs  KcSubst.hs
src/Utils/: CmdArgParser.hs  Debug.hs  DependencyAnalysis.hs  Env.hs  EnvMonad.hs  ErrMsg.hs  ExpandTySyn.hs  FileNameUtils.hs  Id.hs  Nameable.hs  RecompilationChecker.hs  Stack.hs
test/: GHCLoops.hs  RunAllTests.hs  SK.lhs  SimpleLoop.hs  Sk.hs  TSAT.hs  Tc001.hs  Tc002.hs  TesteCarlos.hs  overloaded-compose.hs
test/Cases/: BaseDir.hs  ClassInstCollectorTest.hs  DataConsInfoTest.hs  DeclDependencyTest.hs  FullTypeInferenceTest.hs  IfaceReaderTest.hs  IfaceWriterTest.hs  InstDerivingTest.hs  KindDependencyTest.hs  KindInferenceTest.hs  SatTest.hs  TcExpTest.hs  TcLcgTest.hs  TcLiteralTest.hs  TcPatTest.hs  TestWellFormedInstances.hs  TestWellFormedTypes.hs  TypeOrderingTest.hs  TypeSynExpandTest.hs
test/Data/: TestCase1DeclDependence.hs  TestCase1KindDependence.hs  TestCase1KindInference.hs  TestCase1Lcg.hs  TestCase1Sat.hs  TestCase1TcExp.hs  TestCase1TcLiteral.hs  TestCase1TcPat.hs  TestCase1TypeOrdering.hs  TestCase1TypeSynExpand.hs  TestCase1WellFormedInstances.hs  TestCase1WellFormedTypes.hs  TestCase2KindDependence.hs
test/Data/Full/: PreludeBase.hs  PreludeList.hs  PreludeNumeric.hs  Teste1.hs  Teste2.hs  Teste3.hs
test/classless/: Int.hs  ListMap.hs  TesteLcg.hs  Tree.hs
test/ghc-tests/should-fail/: T5236.hs  tcfail143.hs
test/typecheck/prog001/: B.hs
test/typecheck/should_fail/: fd-loop.hs
